objects/Assessment_Package__c.object
<CustomObject>
    <fields>
        <fullName>Include_in_Weekly_Communication_GSM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Weekly Communication (GSM)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Weekly_Communication_IM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Weekly Communication (IM)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Weekly_Communication_IT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IT Contact</description>
        <label>Include in Weekly Communication (IT)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Weekly_Communication_Inv_M__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inventory Manager</description>
        <label>Include in Weekly Communication (InvM)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Weekly_Communication_NCSM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Weekly Communication (NCSM)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Weekly_Communication_UCSM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Weekly Communication (UCSM)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indicators_used_for_Dealer_Trades__c</fullName>
        <inlineHelpText>In order for VinSolutions to prevent the following type of Sold deals from importing into your account, we need to know what indicators you are using for each (EX: deal type W, House deal user, Salesperson ID #99, etc)</inlineHelpText>
        <label>Indicators used for Dealer Trades</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Indicators_used_for_Fleet__c</fullName>
        <inlineHelpText>In order for VinSolutions to prevent the following type of Sold deals from importing into your account, we need to know what indicators you are using for each (EX: deal type W, House deal user, Salesperson ID #99, etc)</inlineHelpText>
        <label>Indicators used for Fleet</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Indicators_used_for_House_Deals__c</fullName>
        <inlineHelpText>In order for VinSolutions to prevent the following type of Sold deals from importing into your account, we need to know what indicators you are using for each (EX: deal type W, House deal user, Salesperson ID #99, etc)</inlineHelpText>
        <label>Indicators used for House Deals</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Indicators_used_for_Wholesale__c</fullName>
        <inlineHelpText>In order for VinSolutions to prevent the following type of Sold deals from importing into your account, we need to know what indicators you are using for each (EX: deal type W, House deal user, Salesperson ID #99, etc)</inlineHelpText>
        <label>Indicators used for Wholesale</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integrate_a_Call_Provider_with_Vin_Acct__c</fullName>
        <inlineHelpText>Full Question: Do you have a Call Provider you would like to integrate with your VinSolutions Account? If yes, provide that provider in the picklist provided in the following field.</inlineHelpText>
        <label>Integrate a Call Provider with Vin Acct.</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Notes_DMS_Information__c</fullName>
        <label>Internal Notes-DMS Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Notes_Desking__c</fullName>
        <label>Internal Notes-Desking</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Notes_Exports__c</fullName>
        <label>Internal Notes-Exports</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Notes_Forms__c</fullName>
        <label>Internal Notes-Forms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Notes_ILM_CRM_Information__c</fullName>
        <label>Internal Notes-ILM/CRM Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Notes_Inventory_Configuration__c</fullName>
        <label>Internal Notes-Inventory Configuration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Notes_Leads_Internet__c</fullName>
        <label>Internal Notes-Leads/Internet</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Notes_Operational_Detail__c</fullName>
        <label>Internal Notes-Operational Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Notes_Showroom_Sales__c</fullName>
        <label>Internal Notes-Showroom Sales</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Notes_Understanding_Your_Org__c</fullName>
        <label>Internal Notes-Understanding Your Org</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Notes_Verification_Contacts__c</fullName>
        <label>Internal Notes-Verification Contacts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <label>Internal Notes-Dealer Management Team</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internet_Manager_Cell__c</fullName>
        <label>Internet Manager Cell #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Internet_Manager_Email__c</fullName>
        <label>Internet Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Internet_Manager_Name__c</fullName>
        <label>Internet Manager Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internet_Manager_Phone__c</fullName>
        <label>Internet Manager Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Internet_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internet Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assessment Packages (Internet Manager)</relationshipLabel>
        <relationshipName>Assessment_Packages6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internet_New__c</fullName>
        <label>Internet (New)</label>
        <picklist>
            <picklistValues>
                <fullName>DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manage in VIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Specialties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diamond Lot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Uplink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCarlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Spot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chroma Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other 3rd Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internet_Pre_Owned__c</fullName>
        <label>Internet (Pre-Owned)</label>
        <picklist>
            <picklistValues>
                <fullName>DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manage in VIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Specialties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diamond Lot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Uplink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCarlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Spot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chroma Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other 3rd Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InvM_Verification_Participation__c</fullName>
        <label>InvM Verification Participation</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Data Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Form Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking Configuration/Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Assignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Processes/Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Userlist</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Inventory_Conf_Date_Cancelling_1__c</fullName>
        <inlineHelpText>If they indicated a Vendor Name for inventory configuration they will be cancelling in the future, please note the date of cancellation in this field.</inlineHelpText>
        <label>Inventory Conf. Date Cancelling-1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Conf_Date_Cancelling_2__c</fullName>
        <inlineHelpText>If they indicated a Vendor Name for inventory configuration they will be cancelling in the future, please note the date of cancellation in this field.</inlineHelpText>
        <label>Inventory Conf. Date Cancelling-2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Conf_Date_Cancelling_3__c</fullName>
        <inlineHelpText>If they indicated a Vendor Name for inventory configuration they will be cancelling in the future, please note the date of cancellation in this field.</inlineHelpText>
        <label>Inventory Conf. Date Cancelling-3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Manager_Cell__c</fullName>
        <label>Inventory Manager Cell #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Inventory_Manager_Email__c</fullName>
        <label>Inventory Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Inventory_Manager_Name__c</fullName>
        <label>Inventory Manager Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inventory_Manager_Phone__c</fullName>
        <label>Inventory Manager Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Inventory_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assessment Packages (Inventory Manager)</relationshipLabel>
        <relationshipName>Assessment_Packages8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Verification_Email__c</fullName>
        <label>Inventory Verification-Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Inventory_Verification_Name__c</fullName>
        <description>Verification includes new and pre-owned inventory: total counts, photos, pricing, certified units, exports, settings, comments, etc.  This will also include introduction to all of the inventory management tools in VIN.  This contact person needs to be familiar with how you are managing your inventory and pricing now, and how you want to manage going forward with VIN.</description>
        <inlineHelpText>This contact person needs to be familiar with how you are managing your inventory and pricing now, and how you want to manage going forward with VIN.</inlineHelpText>
        <label>Inventory Verification-Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inventory_Verification_Phone__c</fullName>
        <label>Inventory Verification-Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Inventory_Verification_Title__c</fullName>
        <label>Inventory Verification-Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_New__c</fullName>
        <label>Invoice (New)</label>
        <picklist>
            <picklistValues>
                <fullName>DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manage in VIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Specialties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diamond Lot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Uplink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCarlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Spot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chroma Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other 3rd Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Pre_Owned__c</fullName>
        <label>Invoice (Pre-Owned)</label>
        <picklist>
            <picklistValues>
                <fullName>DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manage in VIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Specialties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diamond Lot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Uplink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCarlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Spot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chroma Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other 3rd Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Routing_Settings_Email__c</fullName>
        <description>Who would be able to decide/verify who receives leads?  This includes custom lead routing rules, and all settings that affect leads received such as lost lead times, etc.  We have round robin and lead bucket lead routing available, and will want to discuss pros and cons with each.  Again, this contact would need to be familiar with how you are routing leads now, and how you want leads routed in VIN.</description>
        <inlineHelpText>Email of who would be able to decide/verify who receives leads?</inlineHelpText>
        <label>Lead Routing/Settings Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Routing_Settings_Name__c</fullName>
        <description>Who would be able to decide/verify who receives leads?  This includes custom lead routing rules, and all settings that affect leads received such as lost lead times, etc.  We have round robin and lead bucket lead routing available, and will want to discuss pros and cons with each.  Again, this contact would need to be familiar with how you are routing leads now, and how you want leads routed in VIN.</description>
        <inlineHelpText>Who would be able to decide/verify who receives leads? </inlineHelpText>
        <label>Lead Routing/Settings Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Routing_Settings_Phone__c</fullName>
        <description>Who would be able to decide/verify who receives leads?  This includes custom lead routing rules, and all settings that affect leads received such as lost lead times, etc.  We have round robin and lead bucket lead routing available, and will want to discuss pros and cons with each.  Again, this contact would need to be familiar with how you are routing leads now, and how you want leads routed in VIN.</description>
        <inlineHelpText>Phone # of who would be able to decide/verify who receives leads?</inlineHelpText>
        <label>Lead Routing/Settings Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Lead_Routing_Settings_Title__c</fullName>
        <description>Who would be able to decide/verify who receives leads?  This includes custom lead routing rules, and all settings that affect leads received such as lost lead times, etc.  We have round robin and lead bucket lead routing available, and will want to discuss pros and cons with each.  Again, this contact would need to be familiar with how you are routing leads now, and how you want leads routed in VIN.</description>
        <inlineHelpText>Title of who would be able to decide/verify who receives leads? </inlineHelpText>
        <label>Lead Routing/Settings Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lease_Lenders_1__c</fullName>
        <label>Lease Lenders (1)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lease_Lenders_2__c</fullName>
        <label>Lease Lenders (2)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lease_Lenders_3__c</fullName>
        <label>Lease Lenders (3)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lot_New__c</fullName>
        <label>Lot (New)</label>
        <picklist>
            <picklistValues>
                <fullName>DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manage in VIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Specialties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diamond Lot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Uplink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCarlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Spot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chroma Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other 3rd Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lot_Pre_Owned__c</fullName>
        <label>Lot (Pre-Owned)</label>
        <picklist>
            <picklistValues>
                <fullName>DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manage in VIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Specialties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diamond Lot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Uplink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCarlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Spot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chroma Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other 3rd Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MSRP_New__c</fullName>
        <inlineHelpText>MSRP is for &quot;New&quot; Only. There is not a field for &quot;Pre-Owned&quot; on MSRP</inlineHelpText>
        <label>MSRP (New)</label>
        <picklist>
            <picklistValues>
                <fullName>DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manage in VIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Specialties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diamond Lot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Uplink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCarlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Spot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chroma Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other 3rd Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mark_customers_inactive_if_no_response__c</fullName>
        <label>Mark customers inactive, if no response</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monday_Bodyshop__c</fullName>
        <inlineHelpText>Dealership Hours on Monday</inlineHelpText>
        <label>Dealership Hours on Monday: Bodyshop</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Monday_Parts__c</fullName>
        <inlineHelpText>Dealership Hours on Monday</inlineHelpText>
        <label>Dealership Hours on Monday: Parts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Monday_Service__c</fullName>
        <inlineHelpText>Dealership Hours on Monday</inlineHelpText>
        <label>Dealership Hours on Monday: Service</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Monday_Showroom__c</fullName>
        <inlineHelpText>Dealership Hours on Monday</inlineHelpText>
        <label>Dealership Hours on Monday: Showroom</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Monthly_Avg_Internet_leads_received__c</fullName>
        <inlineHelpText>Full Question: On average, how many internet leads do you receive a month?</inlineHelpText>
        <label>Monthly Avg. Internet leads received</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Monthly_of_Advertising_Budget_Newspape__c</fullName>
        <inlineHelpText>Monthly percentage of advertising budget for Web,Radio,Tv, Newspaper and Other. Total of these percentages MUST equal 100%</inlineHelpText>
        <label>Monthly % of AdvertisingBudget:Newspaper</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_of_Advertising_Budget_Other__c</fullName>
        <inlineHelpText>Monthly percentage of advertising budget for Web,Radio,Tv, Newspaper and Other. Total of these percentages MUST equal 100%</inlineHelpText>
        <label>Monthly % of Advertising Budget: Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Monthly_of_Advertising_Budget_Radio__c</fullName>
        <inlineHelpText>Monthly percentage of advertising budget for Web,Radio,Tv, Newspaper and Other. Total of these percentages MUST equal 100%</inlineHelpText>
        <label>Monthly % of Advertising Budget: Radio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_of_Advertising_Budget_TV__c</fullName>
        <inlineHelpText>Monthly percentage of advertising budget for Web,Radio,Tv, Newspaper and Other. Total of these percentages MUST equal 100%</inlineHelpText>
        <label>Monthly % of Advertising Budget: TV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NCSM_Verification_Participation__c</fullName>
        <label>NCSM Verification Participation</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Data Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Form Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking Configuration/Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Assignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Processes/Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Userlist</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>New_Car_Sales_Manager_Cell__c</fullName>
        <label>New Car Sales Manager Cell #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Car_Sales_Manager_Email__c</fullName>
        <label>New Car Sales Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_Car_Sales_Manager_Name__c</fullName>
        <label>New Car Sales Manager Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Car_Sales_Manager_Phone__c</fullName>
        <label>New Car Sales Manager Phone #</label>
        <type>Phone</type>
    </fields>
</CustomObject>